k8s/esb/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: esb
spec:
  rules:
    - http:
        paths:
          - path: /gateway/*
            pathType: ImplementationSpecific
            backend:
              service:
                name: gateway
                port:
                  number: 3004
          - path: /auth/*
            pathType: ImplementationSpecific
            backend:
              service:
                name: auth-http
                port:
                  number: 3003
          - path: /users/*
            pathType: ImplementationSpecific
            backend:
              service:
                name: auth-http
                port:
                  number: 3003
